# app-template

./: CMakeLists.txt  README.md
qml/: MainPage.qml  main.qml
src/: CMakeLists.txt  main.cpp  org.kde.app.desktop
